--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
           <li class="nav-item">
             <a
               class="nav-link"
-              href="https://onlinelibrary.wiley.com/journal/15405915"
+              href="https://decisionsciencejournal.github.io/editorial_board/"
               target="_blank"
             >Home</a>
           </li>
@@ -71,7 +71,7 @@
               </li>
               <li>
                 <a
-                  href="https://onlinelibrary.wiley.com/page/journal/15405915/homepage/editorialboard.html"
+                  href="https://decisionsciencejournal.github.io/editorial_board/"
                   target="_blank"
                 >Editorial Board</a>
               </li>
@@ -152,8 +152,26 @@
               </li>
             </ul>
           </li>
-
         </ul>
+        <div class="nav-social">
+          <a href="https://www.linkedin.com/in/decision-sciences-journal-dsj-49b02a393/" 
+            target="_blank" 
+            aria-label="DSJ LinkedIn">
+            <img src="images/linkedin.png" alt="LinkedIn">
+          </a>
+
+          <a href="https://x.com/JournalDecSci" 
+            target="_blank" 
+            aria-label="DSJ X (Twitter)">
+            <img src="images/x.avif" alt="X">
+          </a>
+
+          <a href="https://www.facebook.com/decisionsciencesjournal" 
+            target="_blank" 
+            aria-label="DSJ Facebook">
+            <img src="images/facebook.png" alt="Facebook">
+          </a>
+        </div>
       </div>
     </div>
 
@@ -168,8 +186,14 @@
   </header> -->
 
   <div class="worldmap-banner">
-    <img src="images/galaxy6.jpg" alt="World Map">
+    <img src="images/galaxy.jpg" alt="World Map">
     <div class="worldmap-title">DEPARTMENTS</div>
+      <div class="worldmap-admin">
+        Website admin:
+        <a href="https://warrington.ufl.edu/directory/hongyu-chen/" target="_blank">
+          Hongyu Andrew Chen
+        </a>
+      </div>
   </div>
 
 
@@ -260,7 +284,7 @@
           </a>
           <br>
           <br>
-          <a href="https://yining-wang.com/" target="_blank"><span class="prof-name">Yining Wang</span></a><br><I> The University of Texas at Dallas </I> <br>  
+          <a href="https://jindal.utdallas.edu/faculty/yining-wang" target="_blank"><span class="prof-name">Yining Wang</span></a><br><I> The University of Texas at Dallas </I> <br>  
           <a class="email-link" href="mailto:yining.wang@utdallas.edu">
             yining.wang@utdallas.edu
           </a>
@@ -415,7 +439,7 @@
         <!-- 这里是展开后的内容，你可以先随便写点占位文本 -->
         <p>
           <h3 class="dept-subtitle">Departmental Editors</h3>
-          <a href="https://personal.utdallas.edu/~chenjq/" target="_blank"><span class="prof-name">Jianqing Chen,</span></a> <br><I> The University of Texas at Dallas </I> <br>
+          <a href="https://jindal.utdallas.edu/faculty/jianqing-chen/" target="_blank"><span class="prof-name">Jianqing Chen</span></a> <br><I> The University of Texas at Dallas </I> <br>
           <a class="email-link" href="mailto: chenjq@gmail.com">
             chenjq@gmail.com
           </a>
@@ -465,7 +489,7 @@
           </a>
           <br>
           <br>
-          <a href="https://scholar.google.com/citations?user=xhAoJEoAAAAJ&hl=en" target="_blank"><span class="prof-name">David Dobrzykowski</span></a> <br><I> University of Arkansas </I> <br>
+          <a href="https://walton.uark.edu/departments/supplychain/directory/uid/dddobrzy/name/David+Daniel+Dobrzykowski/" target="_blank"><span class="prof-name">David Dobrzykowski</span></a> <br><I> University of Arkansas </I> <br>
           <a class="email-link" href="mailto: dddobrzy@uark.edu">
             dddobrzy@uark.edu
           </a>
@@ -496,7 +520,7 @@
         <!-- 这里是展开后的内容，你可以先随便写点占位文本 -->
         <p>
           <h3 class="dept-subtitle">Departmental Editors</h3>
-          <a href="https://www.insead.edu/faculty/luk-van-wassenhove" target="_blank"><span class="prof-name">Luke van Wassenhove</span></a> <br><I> INSEAD </I> <br>
+          <a href="https://www.insead.edu/faculty/luk-van-wassenhove" target="_blank"><span class="prof-name">Luk Van Wassenhove</span></a> <br><I> INSEAD </I> <br>
           <a class="email-link" href="mailto: luk.van-wassenhove@insead.edu">
             luk.van-wassenhove@insead.edu
           </a>
@@ -764,13 +788,28 @@
         <!-- 这里是展开后的内容，你可以先随便写点占位文本 -->
         <p>
           <h3 class="dept-subtitle">Departmental Editors</h3>
-          <a href="https://haslam.utk.edu/people/profile/gil-souza/" target="_blank"><span class="prof-name">Gil Souza,</span></a>Gil Souza, <I> University of Tennessee, Knoxville </I> <br>
+          <a href="https://haslam.utk.edu/people/profile/gil-souza/" target="_blank"><span class="prof-name">Gilvan Souza</span></a><br><I> University of Tennessee, Knoxville </I> <br>
+          <a class="email-link" href="mailto: gsouza@utk.edu">
+            gsouza@utk.edu
+          </a>
           <br>
-          <a href="https://kelley.iu.edu/faculty-research/faculty-directory/profile.html?id=owenwu" target="_blank"><span class="prof-name">Owen Wu,</span></a> <I> Indiana University Bloomington </I> <br>
           <br>
-          <a href="https://www.kellogg.northwestern.edu/academics-research/faculty/yoon_aaron/" target="_blank"><span class="prof-name">Aaron Yoon,</span></a> <I> Northwestern University </I> <br>
+          <a href="https://kelley.iu.edu/faculty-research/faculty-directory/profile.html?id=owenwu" target="_blank"><span class="prof-name">Owen Wu</span></a> <br><I> Indiana University Bloomington </I> <br>
+          <a class="email-link" href="mailto: owenwu@iu.edu">
+            owenwu@iu.edu
+          </a>
           <br>
-          <a href="https://warrington.ufl.edu/directory/tharanga-rajapakshe/" target="_blank"><span class="prof-name">Tharanga Rajapakshe,</span></a> <I> University of Florida </I> <br>
+          <br>
+          <a href="https://www.kellogg.northwestern.edu/academics-research/faculty/yoon_aaron/" target="_blank"><span class="prof-name">Aaron Yoon</span></a> <br><I> Northwestern University </I> <br>
+          <a class="email-link" href="mailto: aaron.yoon@kellogg.northwestern.edu">
+            aaron.yoon@kellogg.northwestern.edu
+          </a>
+          <br>
+          <br>
+          <a href="https://warrington.ufl.edu/directory/tharanga-rajapakshe/" target="_blank"><span class="prof-name">Tharanga Rajapakshe</span></a> <br> <I> University of Florida </I> <br>
+          <a class="email-link" href="mailto: tharanga.rajapakshe@warrington.ufl.edu">
+            tharanga.rajapakshe@warrington.ufl.edu
+          </a>
         </p>
       </div>
     </details>
@@ -786,9 +825,16 @@
         <!-- 这里是展开后的内容，你可以先随便写点占位文本 -->
         <p>
           <h3 class="dept-subtitle">Departmental Editors</h3>
-          <a href="https://business.gwu.edu/chad-ho" target="_blank"><span class="prof-name">Yi-Chun (Chad) Ho,</span></a> <I> George Washington University </I> <br>
+          <a href="https://business.gwu.edu/chad-ho" target="_blank"><span class="prof-name">Yi-Chun (Chad) Ho</span></a> <br><I> George Washington University </I> <br>
+          <a class="email-link" href="mailto: chadho@gwu.edu">
+            chadho@gwu.edu
+          </a>
           <br>
-          <a href="https://sites.google.com/site/ashish1site/" target="_blank"><span class="prof-name">Ashish Agarwal,</span></a> <I> The University of Texas at Austin </I> <br>
+          <br>
+          <a href="https://www.mccombs.utexas.edu/faculty-and-research/faculty-directory/profile/?username=aa2968" target="_blank"><span class="prof-name">Ashish Agarwal</span></a> <br><I> The University of Texas at Austin </I> <br>
+          <a class="email-link" href="mailto: ashish.agarwal@mccombs.utexas.edu">
+            ashish.agarwal@mccombs.utexas.edu
+          </a>
         </p>
       </div>
     </details>
@@ -804,20 +850,67 @@
         <!-- 这里是展开后的内容，你可以先随便写点占位文本 -->
         <p>
           <h3 class="dept-subtitle">Departmental Editors</h3>
-          <a href="https://haslam.utk.edu/people/profile/christopher-craighead/" target="_blank"><span class="prof-name">Christopher Craighead,</span></a> <I> University of Tennessee, Knoxville </I> <br>
+          <a href="https://haslam.utk.edu/people/profile/christopher-craighead/" target="_blank"><span class="prof-name">Christopher Craighead</span></a> <br><I> University of Tennessee, Knoxville </I> <br>
+          <a class="email-link" href="mailto: craighead@utk.edu">
+            craighead@utk.edu
+          </a>
           <br>
-          <a href="https://scholar.google.com/citations?user=kZiwfUIAAAAJ&hl=en" target="_blank"><span class="prof-name">Constantin Blome,</span></a> <I> Stockholm School of Economics </I> <br>
           <br>
-          <a href="https://www.polyu.edu.hk/lms/people/academic-staff/yulan-wang/?sc_lang=en" target="_blank"><span class="prof-name">Yulan (Amanda) Wang,</span></a> <I> The Hong Kong Polytechnic University </I> <br>
+          <a href="https://www.hhs.se/en/persons/b/blome-constantin/" target="_blank"><span class="prof-name">Constantin Blome</span></a> <br><I> Stockholm School of Economics </I> <br>
+          <a class="email-link" href="mailto: Constantin.Blome@hhs.se">
+            Constantin.Blome@hhs.se
+          </a>
+          <br>
+          <br>
+          <a href="https://www.polyu.edu.hk/lms/people/academic-staff/yulan-wang/?sc_lang=en" target="_blank"><span class="prof-name">Yulan (Amanda) Wang</span></a> <br><I> The Hong Kong Polytechnic University </I> <br>
+          <a class="email-link" href="mailto: yulan.wang@polyu.edu.hk">
+            yulan.wang@polyu.edu.hk
+          </a>
         </p>
       </div>
     </details>
   </div>
 
-
-
-
 </section>
+
+<footer class="dsj-footer">
+  <div class="dsj-footer-inner">
+    <!-- 左侧 LOGO 区 -->
+    <div class="dsj-footer-left">
+      <a href="https://decisionsciences.org/" target="_blank">
+        <img src="images/dsi_logo.jpg" alt="Decision Sciences Journal" class="dsj-footer-logo">
+      </a>
+    </div>
+
+    <!-- 右侧 新闻 / 信息 区 -->
+    <div class="dsj-footer-right">
+      <h3 class="dsj-footer-title">News &amp; Updates</h3>
+      <ul class="dsj-footer-news">
+        <li>
+          <a href="https://onlinelibrary.wiley.com/pb-assets/assets/15405915/DSJ%20Call%20for%20Papers%20-%20AI-Driven%20Decision%20Sciences-1654546841527.pdf" 
+            class="news-text" target="_blank">
+            Call for Papers: AI-Driven Decision Sciences
+          </a>
+        </li>
+
+        <li>
+          <a href="https://onlinelibrary.wiley.com/pb-assets/assets/15405915/Editorial_philosophy_for_DSJ_with_bios_v3-1516289635107.pdf" 
+            class="news-text" target="_blank">
+            Changes in the Editorial Structure at the Decision Sciences Journal
+          </a>
+        </li>
+
+        <li>
+          <a href="https://docs.google.com/spreadsheets/d/1T4Asu029ai_pobMlN0KFd0MLGOLYAH840RuiKayUyRs/edit?gid=0#gid=0" 
+            class="news-text" target="_blank">
+            DSJ Most Cited Articles
+          </a>
+        </li>
+      </ul>
+    </div>
+  </div>
+</footer>
+
 
 </body>
 </html>
