--- a/index.html
+++ b/index.html
@@ -154,21 +154,13 @@
           </li>
         </ul>
         <div class="nav-social">
-          <a href="https://www.linkedin.com/in/decision-sciences-journal-dsj-49b02a393/" 
-            target="_blank" 
-            aria-label="DSJ LinkedIn">
+          <a href="https://www.linkedin.com/in/decision-sciences-journal-dsj-49b02a393/" target="_blank">
             <img src="images/linkedin.png" alt="LinkedIn">
           </a>
-
-          <a href="https://x.com/JournalDecSci" 
-            target="_blank" 
-            aria-label="DSJ X (Twitter)">
-            <img src="images/x.avif" alt="X">
+          <a href="https://x.com/JournalDecSci" target="_blank">
+            <img src="images/x.avif" alt="X (Twitter)">
           </a>
-
-          <a href="https://www.facebook.com/decisionsciencesjournal" 
-            target="_blank" 
-            aria-label="DSJ Facebook">
+          <a href="https://www.facebook.com/decisionsciencesjournal" target="_blank">
             <img src="images/facebook.png" alt="Facebook">
           </a>
         </div>
