--- a/index.html
+++ b/index.html
@@ -200,11 +200,13 @@
   <!-- 2) 两个编辑办公室卡片 -->
   <div class="editorial-office">
     <div class="editorial-card">
-      <div class="avatar">
-        <!-- 先随便用一张图占位，比如放在同目录下的 kalyan.jpg -->
-        <img src="images/nagesh_murthy.webp" alt="Professor Nagesh Murthy">
-      </div>
-      <h3 class="name">Professor Nagesh Murthy</h3>
+      <a href="https://business.uoregon.edu/directory/faculty-staff/all/nmurthy"
+         target="_blank" rel="noopener noreferrer">
+        <div class="avatar">
+          <img src="images/nagesh_murthy.webp" alt="Professor Nagesh Murthy">
+        </div>
+        <h3 class="name">Professor Nagesh Murthy</h3>
+      </a>
       <p class="role">Editor-in-Chief</p>
       <p class="detail">
         Lundquist College of Business, University of Oregon,<br>
@@ -212,12 +214,15 @@
         E-mail: nmurthy@uoregon.edu
       </p>
     </div>
-
+    
     <div class="editorial-card">
-      <div class="avatar">
-        <img src="images/LiangfeiQiu_Website.JPG" alt="Professor Liangfei Qiu">
-      </div>
-      <h3 class="name">Professor Liangfei Qiu</h3>
+      <a href="https://warrington.ufl.edu/directory/liangfei-qiu/"
+         target="_blank" rel="noopener noreferrer">
+        <div class="avatar">
+          <img src="images/LiangfeiQiu_Website.JPG" alt="Professor Liangfei Qiu">
+        </div>
+        <h3 class="name">Professor Liangfei Qiu</h3>
+      </a>
       <p class="role">Editor-in-Chief</p>
       <p class="detail">
         Warrington College of Business, University of Florida,<br>
@@ -225,6 +230,7 @@
         E-mail: liangfei.qiu@warrington.ufl.edu
       </p>
     </div>
+
   </div>
 
   <!-- 3) DEPARTMENT INFORMATION 标题条 -->
