--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8" />
-  <title>POMS Departments Demo</title>
+  <title>Decision Science Journal Editorial Board</title>
 
   <!-- 把外部样式表引入进来；style.css 和 index.html 在同一目录 -->
   <link rel="stylesheet" href="style.css">
