--- a/index.html
+++ b/index.html
@@ -245,6 +245,24 @@
     <details class="dept-accordion">
       <summary>
         <span class="dept-triangle">▲</span>
+        Agentic AI and Generative AI
+      </summary>
+      <div class="dept-panel">
+        <p>
+          <h3 class="dept-subtitle">Departmental Editors</h3>
+          <a href="https://www.mcgill.ca/desautels/maxime-cohen" target="_blank"> <span class="prof-name">Maxime Cohen</span></a> <br> <I> McGill University </I> <br>
+          <a class="email-link" href="mailto:maxime.cohen@mcgill.ca">
+            maxime.cohen@mcgill.ca
+          </a>
+        </p>
+      </div>
+    </details>
+  </div>
+    
+  <div class="departments-wrapper">
+    <details class="dept-accordion">
+      <summary>
+        <span class="dept-triangle">▲</span>
         AI and Data/Business Analytics: Methodologies and Applications
       </summary>
       <div class="dept-panel">
