--- a/index.html
+++ b/index.html
@@ -357,7 +357,7 @@
           <br>
           <br>
           <a href="https://www.hbs.edu/faculty/Pages/profile.aspx?facId=1175206" target="_blank"><span class="prof-name">Shunyuan Zhang</span></a> <br>
-          Business Administration <br>
+          Marketing <br>
           <I> Harvard University </I> <br>
           <a class="email-link" href="mailto: szhang@hbs.edu">
             szhang@hbs.edu
@@ -500,7 +500,7 @@
           <br>
           <br>
           <a href="https://sites.utexas.edu/raghunath-rao/" target="_blank"><span class="prof-name">Raghunath S. Rao</span></a> <br>
-          Marketing
+          Marketing <br> 
           <I> The University of Texas at Austin </I> <br>
           <a class="email-link" href="mailto: Raghunath.Rao@McCombs.utexas.edu">
             Raghunath.Rao@McCombs.utexas.edu
@@ -521,7 +521,7 @@
         <p>
           <h3 class="dept-subtitle">Departmental Editors</h3>
           <a href="https://jindal.utdallas.edu/faculty/jianqing-chen/" target="_blank"><span class="prof-name">Jianqing Chen</span></a> <br>
-          Information Systems
+          Information Systems <br> 
           <I> The University of Texas at Dallas </I> <br>
           <a class="email-link" href="mailto: chenjq@utdallas.edu">
             chenjq@utdallas.edu
@@ -529,7 +529,7 @@
           <br>
           <br>
           <a href="https://business.wisc.edu/directory/profile/allen-li/" target="_blank"><span class="prof-name">Allen Li</span></a> <br>
-          Operations and Information Management
+          Operations and Information Management <br> 
           <I> University of Wisconsin-Madison </I> <br>
           <a class="email-link" href="mailto: allen.li@wisc.edu">
             allen.li@wisc.edu
@@ -583,7 +583,7 @@
           <br>
           <a href="https://mtec.ethz.ch/people/person-detail.stephanwagner.html" target="_blank"><span class="prof-name">Stephan Wagner</span></a> <br>
           Management, Technology, and Economics <br>
-          <I> Federal Institute of Technology Zurich </I> <br>
+          <I> Swiss Federal Institute of Technology Zurich </I> <br>
           <a class="email-link" href="mailto: stwagner@ethz.ch">
             stwagner@ethz.ch
           </a>
@@ -763,7 +763,7 @@
           <br>
           <br>
           <a href="https://business.uoregon.edu/directory/faculty-staff/all/ywu2" target="_blank"><span class="prof-name">Youchang Wu</span></a> <br>
-          Finance
+          Finance <br>
           <I> University of Oregon </I> <br>
           <a class="email-link" href="mailto: ywu2@uoregon.edu">
             ywu2@uoregon.edu
@@ -837,7 +837,7 @@
           <br>
           <br>
           <a href="https://mays.tamu.edu/directory/xuying-zhao/" target="_blank"><span class="prof-name">Xuying Zhao</span></a> <br>
-          Business Administration  <br>
+          Information and Operations Management <br>
           <I> Texas A&amp;M University </I> <br>
           <a class="email-link" href="mailto: xzhao@mays.tamu.edu">
             xzhao@mays.tamu.edu
