--- a/index.html
+++ b/index.html
@@ -203,7 +203,7 @@
       <a href="https://business.uoregon.edu/directory/faculty-staff/all/nmurthy"
         target="_blank" rel="noopener noreferrer">
         <div class="avatar">
-          <img src="images/nagesh_murthy.webp" alt="Professor Nagesh Murthy">
+          <img src="images/Nagesh.jpg" alt="Professor Nagesh Murthy">
         </div>
         <h3 class="name">Professor Nagesh Murthy</h3>
       </a>
