--- a/index.html
+++ b/index.html
@@ -209,6 +209,7 @@
       </a>
       <p class="role">Editor-in-Chief</p>
       <p class="detail">
+        Department of Operations and Business Analytics<br>
         Lundquist College of Business, University of Oregon,<br>
         Lillis 468<br>
         E-mail: nmurthy@uoregon.edu
@@ -225,6 +226,7 @@
       </a>
       <p class="role">Editor-in-Chief</p>
       <p class="detail">
+        Department of Information Systems and Operations Management<br>
         Warrington College of Business, University of Florida,<br>
         Stuzin Hall 331<br>
         E-mail: liangfei.qiu@warrington.ufl.edu
