--- a/index.html
+++ b/index.html
@@ -986,6 +986,14 @@
           </a>
           <br>
           <br>
+          <a href="https://www.kenan-flagler.unc.edu/faculty/directory/yuqian-xu/" target="_blank"><span class="prof-name">Xiaosong (David) Peng</span></a> <br>
+          Decision and Technology Analytics <br>
+          <I> Lehigh University </I> <br>
+          <a class="email-link" href="mailto: xip320@lehigh.edu">
+            xip320@lehigh.edu
+          </a>
+          <br>
+          <br>
           <a href="https://www.kenan-flagler.unc.edu/faculty/directory/yuqian-xu/" target="_blank"><span class="prof-name">Yuqian Xu</span></a> <br>
           Operations <br>
           <I> The University of North Carolina at Chapel Hill </I> <br>
