--- a/index.html
+++ b/index.html
@@ -986,7 +986,7 @@
           </a>
           <br>
           <br>
-          <a href="https://www.kenan-flagler.unc.edu/faculty/directory/yuqian-xu/" target="_blank"><span class="prof-name">Xiaosong (David) Peng</span></a> <br>
+          <a href="https://business.lehigh.edu/directory/xiaosong-david-peng" target="_blank"><span class="prof-name">Xiaosong (David) Peng</span></a> <br>
           Decision and Technology Analytics <br>
           <I> Lehigh University </I> <br>
           <a class="email-link" href="mailto: xip320@lehigh.edu">
