--- a/index.html
+++ b/index.html
@@ -567,6 +567,14 @@
           </a>
           <br>
           <br>
+          <a href="https://harbert.auburn.edu/directory/dave-ketchen.html" target="_blank"><span class="prof-name">Dave Ketchen</span></a> <br>
+          Management and Entrepreneurship <br>
+          <I> Auburn University </I> <br>
+          <a class="email-link" href="mailto: ketchda@auburn.edu">
+            	ketchda@auburn.edu
+          </a>
+          <br>
+          <br>
           <a href="https://broad.msu.edu/profile/sriram/" target="_blank"><span class="prof-name">Sriram Narayanan</span></a> <br>
           Supply Chain Management <br>
           <I> Michigan State University </I> <br>
