--- a/index.html
+++ b/index.html
@@ -807,6 +807,14 @@
           <a class="email-link" href="mailto: director@iimmumbai.ac.in">
             director@iimmumbai.ac.in
           </a>
+          <br>
+          <br>
+          <a href="https://www.fuqua.duke.edu/faculty/can-zhang" target="_blank"><span class="prof-name">Can Zhang</span></a> <br>
+          Operations Management <br>
+          <I> Duke University </I> <br>
+          <a class="email-link" href="mailto: c.zhang@duke.edu">
+            c.zhang@duke.edu
+          </a>
         </p>
       </div>
     </details>
