--- a/index.html
+++ b/index.html
@@ -875,6 +875,14 @@
         <!-- 这里是展开后的内容，你可以先随便写点占位文本 -->
         <p>
           <h3 class="dept-subtitle">Departmental Editors</h3>
+          <a href="https://michiganross.umich.edu/faculty-research/faculty/hyun-soo-ahn" target="_blank"><span class="prof-name">Hyun-Soo Ahn</span></a> <br>
+          Technology and Operations  <br>
+          <I> University of Michigan </I> <br>
+          <a class="email-link" href="mailto: Hsahn@umich.edu">
+            Hsahn@umich.edu
+          </a>
+          <br>
+          <br>
           <a href="https://jindal.utdallas.edu/faculty/metin-cakanyildirim/" target="_blank"><span class="prof-name">Metin Cakanyildirim</span></a> <br>
           Operations Management  <br>
           <I> The University of Texas at Dallas </I> <br>
