--- a/index.html
+++ b/index.html
@@ -793,6 +793,14 @@
         <!-- 这里是展开后的内容，你可以先随便写点占位文本 -->
         <p>
           <h3 class="dept-subtitle">Departmental Editors</h3>
+          <a href="https://www.sem.tsinghua.edu.cn/en/info/1219/7004.htm" target="_blank"><span class="prof-name">Jian Chen</span></a> <br>
+          Management Science and Engineering <br>
+          <I> Tsinghua University </I> <br>
+          <a class="email-link" href="mailto: chenj@sem.tsinghua.edu.cn">
+            chenj@sem.tsinghua.edu.cn
+          </a>
+          <br>
+          <br>
           <a href="https://www.sem.tsinghua.edu.cn/en/info/1219/5728.htm" target="_blank"><span class="prof-name">Zhijie Lin</span></a> <br>
           Management Science and Engineering <br>
           <I> Tsinghua University </I> <br>
