--- a/index.html
+++ b/index.html
@@ -1122,6 +1122,14 @@
           <a class="email-link" href="mailto: chadho@gwu.edu">
             chadho@gwu.edu
           </a>
+          <br>
+          <br>
+          <a href="https://www.isenberg.umass.edu/people/giuseppe-joe-labianca" target="_blank"><span class="prof-name">Giuseppe (Joe) Labianca</span></a> <br>
+          Management <br>
+          <I> University of Massachusetts, Amherst </I> <br>
+          <a class="email-link" href="mailto: glabianca@umass.edu">
+            glabianca@umass.edu
+          </a>
         </p>
       </div>
     </details>
