--- a/index.html
+++ b/index.html
@@ -440,7 +440,7 @@
           </div>
 
           <div class="dept-editor">
-            <a href="https://www.bauer.uh.edu/search/directory/profile.asp?firstname=Meng&lastname=Li" target="_blank"><span class="prof-name">Alice Li</span></a> <br>
+            <a href="https://fisher.osu.edu/people/li.815" target="_blank"><span class="prof-name">Alice Li</span></a> <br>
             Marketing & Logistics <br>
             <I> The Ohio State University </I> <br>
             <a class="email-link" href="mailto: li.815@osu.edu">
@@ -449,7 +449,7 @@
           </div>
 
           <div class="dept-editor">
-            <a href="https://fisher.osu.edu/people/li.815" target="_blank"><span class="prof-name">Meng Li</span></a> <br>
+            <a href="https://www.bauer.uh.edu/search/directory/profile.asp?firstname=Meng&lastname=Li" target="_blank"><span class="prof-name">Meng Li</span></a> <br>
             Decision & Information Sciences <br>
             <I> The University of Houston </I> <br>
             <a class="email-link" href="mailto: mli@bauer.uh.edu">
