--- a/index.html
+++ b/index.html
@@ -808,7 +808,7 @@
             </div>
 
             <div class="dept-editor">
-              <a href="https://mtec.ethz.ch/people/person-detail.stephanwagner.html" target="_blank"><span class="prof-name">Stephan Wagner</span></a> <br>
+              <a href="https://scm.ethz.ch/people/wagner.html" target="_blank"><span class="prof-name">Stephan Wagner</span></a> <br>
               Management, Technology, and Economics <br>
               <I> Swiss Federal Institute of Technology Zurich </I> <br>
               <a class="email-link" href="mailto: stwagner@ethz.ch">
