--- a/index.html
+++ b/index.html
@@ -300,7 +300,7 @@
         <h3 class="dept-subtitle">Departmental Editors</h3>
         <div class="dept-editors-grid">
           <div class="dept-editor">
-            <a href="https://english.ckgsb.edu.cn/faculty/tianshu-sun/" target="_blank"><span class="prof-name">Tianshu Sun  </span></a><br>
+            <a href="https://sites.google.com/view/tianshu-sun/home" target="_blank"><span class="prof-name">Tianshu Sun  </span></a><br>
             Information Systems <br>
             <I> Cheung Kong Graduate School of Business </I> <br>
             <a class="email-link" href="mailto:tianshusun@ckgsb.edu.cn">
