--- a/index.html
+++ b/index.html
@@ -309,6 +309,12 @@
           </div>
         </div>
 
+        <h3 class="dept-subtitle">
+          <a href="agentic_ai_human_agent_collab_ae_erb.html" class="dept-subtitle-link">
+            Associate Editors and Editorial Review Board Members
+          </a>
+        </h3>
+        
       </p>
     </div>
   </details>
