--- a/agentic_ai_human_agent_collab_ae_erb.html
+++ b/agentic_ai_human_agent_collab_ae_erb.html
@@ -200,7 +200,7 @@
     <div class="dept-page-header-card">
       <a class="dept-backlink" href="https://decisionsciencejournal.github.io/editorial_board/">← Back to Departments</a>
       <h1 class="dept-page-title">Agentic AI and Human-Agent Collaboration in Business</h1>
-      <p class="dept-page-subtitle">Associate Editors and Editorial Review Board Members</p>
+      <p class="dept-page-subtitle">Associate Editors</p>
       <div class="dept-page-actions">
         <a class="dept-action-btn" href="attachments/DSJ_AE_Agentic_AI_and_Human_Agent_Collaboration_in_Business.xlsx" target="_blank" rel="noopener">
           Excel (download)
