--- a/index.html
+++ b/index.html
@@ -314,7 +314,7 @@
             Associate Editors and Editorial Review Board Members
           </a>
         </h3>
-        
+
       </p>
     </div>
   </details>
@@ -406,6 +406,12 @@
           </div>
         </div>
 
+        <h3 class="dept-subtitle">
+          <a href="DSJ_AE_AI_and_DataBusiness_Analytics_Methodologies_and_Applications.html" class="dept-subtitle-link">
+            Associate Editors and Editorial Review Board Members
+          </a>
+        </h3>
+
       </p>
     </div>
   </details>
@@ -481,6 +487,12 @@
             </a>
           </div>
         </div>
+
+        <h3 class="dept-subtitle">
+          <a href="DSJ_AE_AI_in_Operations_Information_Systems_and_Marketing.html" class="dept-subtitle-link">
+            Associate Editors and Editorial Review Board Members
+          </a>
+        </h3>
 
       </p>
     </div>
