--- a/index.html
+++ b/index.html
@@ -1474,6 +1474,11 @@ The Information Systems and Technological Interventions department invites paper
               </a>
             </div>
           </div>
+          <h3 class="dept-subtitle">
+            <a href="DSJ_AE_Public_Policy_and_Global_Supply_Chains.html" class="dept-subtitle-link">
+              Associate Editors and Editorial Review Board Members
+            </a>
+          </h3>
         </p>
       </div>
     </details>
