--- a/DSJ_AE_AI_in_Operations_Information_Systems_and_Marketing.html
+++ b/DSJ_AE_AI_in_Operations_Information_Systems_and_Marketing.html
@@ -463,6 +463,28 @@
       </summary>
       <div class="ae-body"></div>
     </details>
+
+    <details class="ae-card">
+      <summary>
+        <div>
+          <div class="ae-name">Jie (Jennifer) Zhang</div>
+          <div class="ae-affil">University of Texas at Arlington</div>
+        </div>
+        <div class="ae-caret">▾</div>
+      </summary>
+      <div class="ae-body"></div>
+    </details>
+
+    <details class="ae-card">
+      <summary>
+        <div>
+          <div class="ae-name">Dongwon Lee</div>
+          <div class="ae-affil">The Hong Kong University of Science and Technology</div>
+        </div>
+        <div class="ae-caret">▾</div>
+      </summary>
+      <div class="ae-body"></div>
+    </details>
   </div>
 
   <p class="dept-page-subtitle" style="margin-top:18px;">Editorial Board Members</p>
