--- a/index.html
+++ b/index.html
@@ -1149,6 +1149,12 @@ The Information Systems and Technological Interventions department invites paper
               </a>
             </div>
           </div>
+
+          <h3 class="dept-subtitle">
+            <a href="DSJ_AE_Information_Systems_and_Technological_Interventions.html" class="dept-subtitle-link">
+              Associate Editors and Editorial Review Board Members
+            </a>
+          </h3>
         </p>
       </div>
     </details>
