--- a/index.html
+++ b/index.html
@@ -310,7 +310,7 @@
         </div>
 
         <h3 class="dept-subtitle">
-          <a href="agentic_ai_human_agent_collab_ae_erb.html" class="dept-subtitle-link">
+          <a href="DSJ_AE_Agentic_AI_and_Human_Agent_Collaboration_in_Business.html" class="dept-subtitle-link">
             Associate Editors and Editorial Review Board Members
           </a>
         </h3>
@@ -917,6 +917,23 @@
       <div class="dept-panel">
         <!-- 这里是展开后的内容，你可以先随便写点占位文本 -->
         <p>
+          <h3 class="dept-subtitle">Mission Statement</h3>
+          Healthcare plays a central role in people’s daily lives, shaping their health and wellbeing, experiences of illness, recovery, access, dignity, and trust. Decisions made by clinicians, administrators, technology designers, and policymakers often have immediate and irreversible consequences. This all takes place in a unique operational environment characterized by distinctive payment models, regulatory requirements, and organizational hierarchies, among other factors. This makes healthcare a uniquely important domain for operations management and information systems, one where rigorous scholarship can generate direct and meaningful impact.
+          <br>
+          <br>
+          The Department of Healthcare Operations at Decision Sciences seeks research that advances our understanding of how healthcare is delivered, managed, and improved. We view operations management and information systems as two central and synergistic levers for addressing the healthcare quadruple aim of improved patient experience, better population health, lower costs, and care-team well-being. Operations management contributes to the design of better processes, resource allocation, coordination, and flow across complex care pathways. Information systems research examines how data, technology, analytics, and AI reshape decision making, workflows, and interactions among clinicians, administrators, patients, and regulators.
+          <br>
+          <br>
+          We are particularly interested in work that designs and evaluates healthcare technologies, systems, processes, interventions, and innovations using valid and meaningful outcome metrics. These outcomes may include improvements in clinical quality, patient safety, access to care, efficiency, cost containment, provider productivity, administrative performance, and/or patient experience. Strong submissions clearly articulate why the outcomes studied matter, how they are measured, how they link operational or information system design choices to observable improvements in care delivery, and how they could be implemented in current workflows to achieve meaningful results.
+          <br>
+          <br>
+          The department places a high value on research that integrates theory with empirical evidence. Theoretical models should clarify mechanisms, generate testable predictions, and sharpen the understanding of trade-offs in healthcare decision making. Empirical analyses should be methodologically rigorous, grounded in real-world problems and data, and designed to speak directly to theoretical insights. We welcome a broad range of empirical approaches, including causal inference, structural modeling, field experiments, design science, and mixed-methods research.
+          <br>
+          <br>
+          Impact is a central criterion for publication. We seek research that provides actionable insight into how healthcare systems, technologies, and policies can be designed and managed to improve outcomes. We place particular value on work that moves beyond description to generate prescriptive guidance. Such work should clarify under what conditions specific design and decision choices are effective and with what expected consequences.
+          <br>
+          <br>
+          Our goal is to publish research that is analytically rigorous, empirically credible, grounded in real-world challenges, and practically consequential. Such research improves healthcare not only as an economic system, but as a fundamental part of everyday life.
           <h3 class="dept-subtitle">Departmental Editors</h3>
 
           <div class="dept-editors-grid">
