--- a/DSJ_AE_Information_Systems_and_Technological_Interventions.html
+++ b/DSJ_AE_Information_Systems_and_Technological_Interventions.html
@@ -398,6 +398,28 @@
         </summary>
         <div class="ae-body"></div>
       </details>
+
+      <details class="ae-card">
+        <summary>
+          <div>
+            <div class="ae-name">Hua Ye</div>
+            <div class="ae-affil">University of Oklahoma</div>
+          </div>
+          <div class="ae-caret">▾</div>
+        </summary>
+        <div class="ae-body"></div>
+      </details>
+
+      <details class="ae-card">
+        <summary>
+          <div>
+            <div class="ae-name">Liqiang Huang</div>
+            <div class="ae-affil">Zhejiang University</div>
+          </div>
+          <div class="ae-caret">▾</div>
+        </summary>
+        <div class="ae-body"></div>
+      </details>
     </div>
 
     <p class="dept-page-subtitle" style="margin-top:18px;">Editorial Board Members</p>
