--- a/DSJ_AE_AI_and_DataBusiness_Analytics_Methodologies_and_Applications.html
+++ b/DSJ_AE_AI_and_DataBusiness_Analytics_Methodologies_and_Applications.html
@@ -190,7 +190,7 @@
     <div class="worldmap-title">DEPARTMENTS</div>
       <div class="worldmap-admin">
         Website admin:
-        <a href="https://warrington.ufl.edu/directory/hongyu-chen/" target="_blank">
+        <a href="https://www.linkedin.com/in/hongyuchenuw/" target="_blank">
           Hongyu Andrew Chen
         </a>
       </div>
