--- a/index.html
+++ b/index.html
@@ -190,7 +190,7 @@
     <div class="worldmap-title">DEPARTMENTS</div>
       <div class="worldmap-admin">
         Website admin:
-        <a href="https://warrington.ufl.edu/directory/hongyu-chen/" target="_blank">
+        <a href="https://www.linkedin.com/in/hongyuchenuw/" target="_blank">
           Hongyu Andrew Chen
         </a>
       </div>
@@ -569,7 +569,12 @@
             </a>
           </div>
         </div>
-
+        
+        <h3 class="dept-subtitle">
+          <a href="DSJ_AE_Analytical_Studies_in_SCM.html" class="dept-subtitle-link">
+            Associate Editors and Editorial Review Board Members
+          </a>
+        </h3>
       </p>
     </div>
   </details>
