--- a/DSJ_AE_Public_Policy_and_Global_Supply_Chains.html
+++ b/DSJ_AE_Public_Policy_and_Global_Supply_Chains.html
@@ -86,7 +86,7 @@
     <div class="worldmap-title">DEPARTMENTS</div>
     <div class="worldmap-admin">
       Website admin:
-      <a href="https://warrington.ufl.edu/directory/hongyu-chen/" target="_blank">Hongyu Andrew Chen</a>
+      <a href="https://www.linkedin.com/in/hongyuchenuw/" target="_blank">Hongyu Andrew Chen</a>
     </div>
   </div>
 
