--- a/index.html
+++ b/index.html
@@ -1427,6 +1427,15 @@ The Information Systems and Technological Interventions department invites paper
             </div>
 
             <div class="dept-editor">
+              <a href="https://business.purdue.edu/faculty/home.php?username=dchhajed" target="_blank"><span class="prof-name">Dilip Chhajed</span></a> <br>
+              Supply Chain and Operations Management <br>
+              <I> Purdue University </I> <br>
+              <a class="email-link" href="mailto: dchhajed@purdue.edu">
+                dchhajed@purdue.edu
+              </a>
+            </div>
+
+            <div class="dept-editor">
               <a href="https://vinuni.edu.vn/people/anant-mishra/" target="_blank"><span class="prof-name">Anant Mishra</span></a> <br>
               Supply Chain <br>
               <I> VinUniversity </I> <br>
