--- a/index.html
+++ b/index.html
@@ -1066,7 +1066,7 @@
         <!-- 这里是展开后的内容，你可以先随便写点占位文本 -->
         <p>
           <h3 class="dept-subtitle">Mission Statement</h3>
-The Information Systems and Technological Interventions department invites papers that create new knowledge on the creation, adoption, use, and implications of information technology interventions at the societal, organizational, group, or individual levels. We welcome rigorous analytical approaches grounded in any research method, including qualitative and quantitative. We are particularly interested in groundbreaking work that makes contributions to both theory and practice. We also welcome research that makes innovative methodological contributions. Topic areas include, but are not limited to the following:
+          The Information Systems and Technological Interventions department invites papers that create new knowledge on the creation, adoption, use, and implications of information technology interventions at the societal, organizational, group, or individual levels. We welcome rigorous analytical approaches grounded in any research method, including qualitative and quantitative. We are particularly interested in groundbreaking work that makes contributions to both theory and practice. We also welcome research that makes innovative methodological contributions. Topic areas include, but are not limited to the following:
           <ul class="dept-bullets">
             <li>The role of information systems (IS) in generating data, information, and knowledge:
               <ul class="dept-bullets">
@@ -1259,6 +1259,11 @@ The Information Systems and Technological Interventions department invites paper
             </div>
           </div>
         </p>
+        <h3 class="dept-subtitle">
+          <a href="DSJ_AE_Operations_Information_Systems_and_Supply_Chain_Management_in_Emerging_Economies.html" class="dept-subtitle-link">
+            Associate Editors and Editorial Review Board Members
+          </a>
+        </h3>
       </div>
     </details>
   </div>
