--- a/index.html
+++ b/index.html
@@ -1654,6 +1654,11 @@
             </div>
           </div>
         </p>
+        <h3 class="dept-subtitle">
+          <a href="DSJ_AE_Social_Technology_and_Social_Media_for_Operations.html" class="dept-subtitle-link">
+            Associate Editors and Editorial Review Board Members
+          </a>
+        </h3>
       </div>
     </details>
   </div>
