--- a/DSJ_AE_Social_Technology_and_Social_Media_for_Operations.html
+++ b/DSJ_AE_Social_Technology_and_Social_Media_for_Operations.html
@@ -286,6 +286,17 @@
         </summary>
         <div class="ae-body"></div>
       </details>
+
+      <details class="ae-card">
+        <summary>
+          <div>
+            <div class="ae-name">Jaehwuen Jung</div>
+            <div class="ae-affil">Temple University</div>
+          </div>
+          <div class="ae-caret">▾</div>
+        </summary>
+        <div class="ae-body"></div>
+      </details>
     </div>
   </div>
 
