--- a/index.html
+++ b/index.html
@@ -1051,6 +1051,12 @@
               </a>
             </div>
           </div>
+
+          <h3 class="dept-subtitle">
+            <a href="DSJ_AE_Humanitarian_Non_Profit_Operations_and_Disaster_Management.html" class="dept-subtitle-link">
+              Associate Editors and Editorial Review Board Members
+            </a>
+          </h3>
         </p>
       </div>
     </details>
