--- a/DSJ_AE_Operations_Information_Systems_and_Supply_Chain_Management_in_Emerging_Economies.html
+++ b/DSJ_AE_Operations_Information_Systems_and_Supply_Chain_Management_in_Emerging_Economies.html
@@ -363,6 +363,17 @@
         </summary>
         <div class="ae-body"></div>
       </details>
+
+      <details class="ae-card">
+        <summary>
+          <div>
+            <div class="ae-name">Sripad Devalkar</div>
+            <div class="ae-affil">Indian School of Business</div>
+          </div>
+          <div class="ae-caret">▾</div>
+        </summary>
+        <div class="ae-body"></div>
+      </details>
     </div>
 
     <p class="dept-page-subtitle" style="margin-top:18px;">Editorial Board Members</p>
