--- a/index.html
+++ b/index.html
@@ -978,6 +978,12 @@
               </a>
             </div>
           </div>
+
+          <h3 class="dept-subtitle">
+            <a href="DSJ_AE_Healthcare_Operations.html" class="dept-subtitle-link">
+              Associate Editors and Editorial Review Board Members
+            </a>
+          </h3>
         </p>
       </div>
     </details>
@@ -1820,6 +1826,12 @@
               </a>
             </div>
           </div>
+
+          <h3 class="dept-subtitle">
+            <a href="DSJ_AE_Sustainable_Operations_and_Circular_Economy.html" class="dept-subtitle-link">
+              Associate Editors and Editorial Review Board Members
+            </a>
+          </h3>
         </p>
       </div>
     </details>
